# moeche

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/simple_pkg/: CROSSCOMPILING.md  Cargo.toml  README.md
examples/simple_pkg/recipies/: cross.yml  darwin.yml  linux.yml  m1.yml  shared.yml  windows.yml
examples/simple_pkg/simple_pkg/: __init__.py
examples/simple_pkg/src/: lib.rs
harness_gen/: Cargo.toml
moeche/: Cargo.toml
moeche/src/: main.rs
pyo3_bindgen/: Cargo.toml
pyo3_bindgen/doc/: lib.json
pyo3_bindgen/src/: lib.rs
rust_lexer/: Cargo.toml  render_utf8_chars_collections.py
rust_lexer/src/: chars_constants.rs  comment.rs  identifier.rs  keyword.rs  lib.rs  literal.rs  peekable.rs  symbol.rs
rust_parser/: Cargo.toml
rust_parser/src/: lib.rs  visibility.rs
wheel_builder/: Cargo.toml
wheel_builder/src/: lib.rs  manylinux_policies.json
wheel_compiler/: Cargo.toml  build.rs
wheel_compiler/src/: lib.rs
wheel_compiler/src/recipies_reader/: build_recipe.rs  build_target.rs  mod.rs
