[package]
name = "moeche"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="3.2.4", features=["derive", "color", "suggestions", "regex", "unicode", "wrap_help"]}
wheel_compiler = {path="../wheel_compiler"}