[package]
name = "wheel_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zip = "0.6.2"
sha2 = "0.10"
base64ct = {version="1.0.1", features=["alloc"]}
goblin = {version="0.5", features=["std"]}
regex = "1"
scroll = "0.11"