[package]
name = "simple_pkg"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository= "https://github.com/AnacletoLAB/ensmallen"
readme = "./README.md"
description = "Test package!"
keywords = ["python", "rust"]
authors = [
    "Tommaso Fontana <tommaso.fontana.96@gmail.com>"    
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "simple_pkg"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.17"
features = ["extension-module", "abi3", "abi3-py37", "macros", "multiple-pymethods"]